turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:46: error: type mismatch;
 found   : Unit
 required: Int
  rule = Array(Array(Array(1,RIGHT,0),Array(1,Right,1)),Array(Array(0,NOTURN,0),Array(0,NOTURN,1)))
                                              ^Turmite:47: error: not found: value setPosition
  setPosition(8,33)
  ^